shared-business-logics/services/centralized-dashboard/Backend/Java/reporting-services/centralized-reporting/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: centralized-reporting
  namespace: centralized-dashboard
  labels:
    app: centralized-reporting
    team: team-f-centralized-dashboard
spec:
  type: ClusterIP
  selector:
    app: centralized-reporting
  ports:
  - name: http
    port: 8104
    targetPort: 8104
    protocol: TCP
  sessionAffinity: None
